--- a/index.html
+++ b/index.html
@@ -16,44 +16,52 @@
 </head>
 <body>
 
-  Simple Omelette Recipe
+  <h1>Simple Omelette Recipe</h1>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+ <p> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-  Preparation time
+  <strong>Preparation time</strong>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
-
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
+  <ul>
+    <li><strong>Total:</strong> Approximately 10 minutes</li>
+    <li> <strong>Preparation:</strong> 5 minutes</li>
+    <li><strong>Cooking:</strong> 5 minutes</li>
+  </ul>  
+  
+ <h2>Ingredients</h2>
+  <ul>
+    <li> 2-3 large eggs</li>
+    <li>Salt, to taste</li>
+    <li>Pepper, to taste</li>
+    <li>1 tablespoon of butter or oil</li>
+    <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+  </ul>
+ 
+ <h2> Instructions</h2>
+  
+ <ol>
+  <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+    You can add a tablespoon of water or milk for a fluffier texture.</li>
+ <li>
+  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+<li>
   Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
   the eggs evenly coat the surface.
-
+</li>  
+<li>
   Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
+  middle, sprinkle your chosen fillings over one half of the omelette.</li>
+<li>
   Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
   fillings. Let it cook for another minute, then slide it onto a plate.
-
+</li>
+<li>
   Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
+</li>
+</ol>
+  
+  <h2>Nutrition</h2>
 
   The table below shows nutritional values per serving without the additional fillings.
 
