--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
 </head>
 <body>
 
- <main>
+ <main class="principal">
   <figure>
     <img src="./assets/images/image-omelette.jpeg" alt="">
   </figure>
   <article>
     <h1>Simple Omelette Recipe</h1>
   
-    <p> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+    <p class="palav"> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
      to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
    </article>
   
-   <section>
-    <strong>Preparation time</strong>
-  
-    <ul>
+   <section class="sesao-01">
+    <strong class="palav">Preparation time</strong>
+    <ul class="palav">
       <li><strong>Total:</strong> Approximately 10 minutes</li>
       <li> <strong>Preparation:</strong> 5 minutes</li>
       <li><strong>Cooking:</strong> 5 minutes</li>
@@ -40,7 +39,7 @@
     
    <section>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="palav">
       <li> 2-3 large eggs</li>
       <li>Salt, to taste</li>
       <li>Pepper, to taste</li>
@@ -52,7 +51,7 @@
   <section>
     <h2> Instructions</h2>
     
-    <ol>
+    <ol class="palav">
      <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
        You can add a tablespoon of water or milk for a fluffier texture.</li>
     <li>
@@ -77,8 +76,8 @@
    <section>
     <h2>Nutrition</h2>
   
-    <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table>
+    <p class="palav">The table below shows nutritional values per serving without the additional fillings.</p>
+      <table class="palav">
         <tr>
           <th>Calories</th>
           <th>277kcal</th>
