--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
    </article>
   
    <section class="sesao-01">
-    <strong class="palav">Preparation time</strong>
-    <ul class="palav">
+    <div>
+      <strong class="palav preparation">Preparation time</strong>
+    <ul class="palav lista-01">
       <li><strong>Total:</strong> Approximately 10 minutes</li>
       <li> <strong>Preparation:</strong> 5 minutes</li>
       <li><strong>Cooking:</strong> 5 minutes</li>
     </ul> 
+    </div>
    </section> 
     
    <section>
