--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div>
    </section> 
     
-   <section>
+   <section class="sesao-02">
     <h2>Ingredients</h2>
-    <ul class="palav">
+    <ul class="palav lista-ingred">
       <li> 2-3 large eggs</li>
       <li>Salt, to taste</li>
       <li>Pepper, to taste</li>
@@ -50,27 +50,30 @@
     </ul>
    </section>
    
-  <section>
+  <section class="sesao-03">
     <h2> Instructions</h2>
     
-    <ol class="palav">
-     <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-       You can add a tablespoon of water or milk for a fluffier texture.</li>
+    <ol class="palav lista-instrucoes">
+     <li><strong>Beat the eggs:</strong> In a bowl, beat the<br>
+       eggs with a pinch of salt and pepper<br>
+       until they are well mixed. You can add<br>
+      a tablespoon of water or milk for a fluffier texture.</li>
     <li>
-     Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+    <strong> Heat the pan:</strong> Place a non-stick frying<br>
+    pan over medium heat and add butter<br> or oil.</li>
    <li>
-     Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-     the eggs evenly coat the surface.
+     <strong>Cook the omelette:</strong> Once the butter is<br> melted and bubbling, pour in the eggs.<br> Tilt the pan to ensure 
+     the eggs evenly<br> coat the surface.
    </li>  
    <li>
-     Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-     middle, sprinkle your chosen fillings over one half of the omelette.</li>
+     <strong>Add fillings (optional):</strong> When the eggs<br> begin to set at the edges but are still<br> slightly runny in the 
+     middle, sprinkle<br> your chosen fillings over one half of<br> the omelette.</li>
    <li>
-     Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-     fillings. Let it cook for another minute, then slide it onto a plate.
+     <strong>Fold and serve:</strong> As the omelette<br> continues to cook, carefully lift one<br> edge and fold it over the 
+     fillings. Let it<br> cook for another minute, then slide it<br> onto a plate.
    </li>
    <li>
-     Enjoy: Serve hot, with additional salt and pepper if needed.
+    <strong> Enjoy:</strong> Serve hot, with additional salt<br> and pepper if needed.
    </li>
    </ol>
   </section>
