--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
    </ol>
   </section>
     
-   <section>
+   <section class="sesao-04">
     <h2>Nutrition</h2>
   
     <p class="palav">The table below shows nutritional values per serving without the additional fillings.</p>
