--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
         <table class="palav">
           <tr>
             <th>Calories</th>
-            <th>277kcal</th>
+            <th class="coluna-2">277kcal</th>
           </tr>
           <tr>
             <td>Carbs</td>
-            <td>0g</td>
+            <td class="coluna-2">0g</td>
           </tr>
           <tr>
             <td>Protein</td>
-            <td>20g</td>
+            <td class="coluna-2">20g</td>
           </tr>
           <tr>
             <td>Fat</td>
-            <td>22g</td>
+            <td class="coluna-2">22g</td>
           </tr>
         </table>
      </section>
