--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
       <p class="palav">The table below shows nutritional values per serving without the additional fillings.</p>
         <table class="palav">
           <tr>
-            <th>Calories</th>
+            <th class="coluna-1 calories">Calories</th>
             <th class="coluna-2">277kcal</th>
           </tr>
           <tr>
-            <td>Carbs</td>
+            <td class="coluna-1">Carbs</td>
             <td class="coluna-2">0g</td>
           </tr>
           <tr>
-            <td>Protein</td>
+            <td class="coluna-1">Protein</td>
             <td class="coluna-2">20g</td>
           </tr>
           <tr>
-            <td>Fat</td>
-            <td class="coluna-2">22g</td>
+            <td class="coluna-1 mod">Fat</td>
+            <td class="coluna-2 mod">22g</td>
           </tr>
         </table>
      </section>
